fixed some styling, spacing and image sizing on homepage

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -131,6 +131,8 @@
   width: 80px;
   height: 150px;
   margin: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .collections-header {
