--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -55,3 +55,9 @@
   width: fit-content;
   border: 0;
 }
+
+.search-bar-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
